<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/name"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/name1"
            tools:ignore="LabelFor" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="397dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/name2"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCloseTask"
            android:backgroundTint="#656565"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="#F3E5F5"/>

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#656565"
            android:text="@string/edit"
            android:textColor="#F3E5F5" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>