<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Note">

    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="397dp"
            android:layout_height="124dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/EditText1"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:hint="@string/editTextDatre"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/EditTexT"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NotSibling">

        <Button
            android:id="@+id/buttonClose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/close"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonCreate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/buttonZam"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>