<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/my_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="casual"
            android:text="@string/TextView1"
            android:textSize="25sp"
            tools:ignore="DuplicateIds,TextSizeCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="60dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Switch
            android:id="@+id/Active"
            android:layout_width="50dp"
            android:layout_height="21dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_gravity="bottom"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/TextView"
            />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/purple"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/but5"
            android:textAlignment="center"
            android:textColor="#F3E5F5"
            android:textSize="20sp"
            />


        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:backgroundTint="@color/purple"
            android:text="Notification test"
            android:textColor="@color/white"
            />
    </LinearLayout>

</RelativeLayout>